# agent-spend-collector

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  INTERVIEWS.md  LICENSE  PLAN.md  README.md  SECURITY.md  budgets.example.json  gateway.example.json  pyproject.toml  spend.config.example.json  wallet-map.example.json
.github/workflows/: ci.yml
docs/: OPERATIONS.md
fixtures/: azure_cost_query.json  budgets.json  gcp_billing_export.json  llm_usage.json  stripe_events.json  usdc_transfers.json  x402_settlements.json
scripts/: dogfood.sh
spend_collector/: __init__.py  __main__.py  adapters.py  detectors.py  gateway.py  providers.py  report.py  schema.py  sources.py  store.py
tests/: test_collector.py  test_worst_case_reserve.py
