[project]
name = "spend-collector"
version = "0.0.1"
description = "Read-only cross-rail agent spend collector (LLM token + x402 + Stripe -> one FOCUS-shaped ledger)"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
  { name = "Yitian Wu" },
]
keywords = ["agent", "finops", "llm", "x402", "stripe", "security", "spend"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: Financial and Insurance Industry",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Office/Business :: Financial",
  "Topic :: Security",
]
dependencies = []  # stdlib-only scaffold

[project.optional-dependencies]
pricing = ["tokencost"]  # real/maintained model pricing (else the tiny static price book)

[project.scripts]
spend-collector = "spend_collector.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["spend_collector"]

[tool.hatch.build.targets.wheel.force-include]
"fixtures" = "fixtures"

[tool.hatch.build.targets.sdist]
include = [
  "spend_collector",
  "fixtures",
  "tests",
  "docs",
  "README.md",
  "LICENSE",
  "pyproject.toml",
  ".env.example",
  "budgets.example.json",
]
